# sizing_course

./: .buildinfo  README.md  _config.yml  _toc - Copie.yml  _toc.yml  genindex.html  objects.inv  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy_book.yml
_build/.doctrees/: environment.pickle
_build/html/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
_downloads/027cf51780dbec3e3990e3bc4c2c761c/: TD_Optimization_multirotor_first_student.xlsx
_sources/about/: installation.md  syllabus.md
about/: accommodations.html  context.html  context.md  course_schedule.html  doing_well.html  faq.html  feedback.html  homepage.html  homepage.md  installation.html  pre_term.html  syllabus.html  syllabus.md  unsyllabus.html
class/: final.html  labs.html
class/CM1/: 1-objectives-ressources.html  1-objectives_and_ressources.html  2-needs_and_general_methodology.html  3-scenarios_and_design_drivers.html  4-quizz.html  summary.html
class/Lab-elevator/: summary.html
class/Lab-mobility/: 00_SustainableMobility.ipynb  summary.html
class/Lab-multirotor/: summary.html
class/Lab-vega/: 1-sizing_scenarios-student.html  1-sizing_scenarios.html  2-estimation_models-student.html  2-estimation_models.html  3-simulation_models-student.html  3-simulation_models.html  4-evaluation_models-student.html  4-evaluation_models.html  5-sizing_and_optimization-student.html  5-sizing_and_optimization.html  6-sizing_and_optimization_with_mdao_using_om-student.html  6-sizing_and_optimization_with_mdao_using_om.html  summary.html
class/Lab-watt_project/: 00_SustainableMobility.html  (+24 more)
(+735 files in other folders)
